@@ -7,16 +7,21 @@ import com.mlt.decoder.vectorized.VectorizedDecodingUtils;
 import com.mlt.decoder.vectorized.VectorizedGeometryDecoder;
 import com.mlt.decoder.vectorized.VectorizedIntegerDecoder;
 import com.mlt.decoder.vectorized.VectorizedPropertyDecoder;
+import com.mlt.metadata.stream.RleEncodedStreamMetadata;
 import com.mlt.metadata.stream.StreamMetadataDecoder;
 import com.mlt.metadata.tileset.MltTilesetMetadata;
 import com.mlt.vector.BitVector;
 import com.mlt.vector.FeatureTable;
 import com.mlt.vector.Vector;
+import com.mlt.vector.VectorType;
 import com.mlt.vector.flat.IntFlatVector;
 import com.mlt.vector.flat.LongFlatVector;
 import com.mlt.vector.geometry.GeometryVector;
+import com.mlt.vector.sequence.IntSequenceVector;
+import com.mlt.vector.sequence.LongSequenceVector;
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 import me.lemire.integercompression.IntWrapper;
 import org.locationtech.jts.geom.Geometry;
 
@@ -34,7 +39,7 @@ public class MltDecoder {
     while (offset.get() < tile.length) {
       List<Long> ids = null;
       Geometry[] geometries = null;
-      var properties = new HashMap<String, List<?>>();
+      var properties = new HashMap<String, List<Object>>();
 
       var version = tile[offset.get()];
       offset.increment();
@@ -53,6 +58,7 @@ public class MltDecoder {
         if (columnName.equals(ID_COLUMN_NAME)) {
           if (numStreams == 2) {
             var presentStreamMetadata = StreamMetadataDecoder.decode(tile, offset);
+            // TODO: handle present stream -> should a id column even be nullable?
             var presentStream =
                 DecodingUtils.decodeBooleanRle(
                     tile,
@@ -68,7 +74,7 @@ public class MltDecoder {
                 IntegerDecoder.decodeIntStream(tile, offset, idDataStreamMetadata, false).stream()
                     .mapToLong(i -> i)
                     .boxed()
-                    .toList();
+                    .collect(Collectors.toList());
           } else {
             ids = IntegerDecoder.decodeLongStream(tile, offset, idDataStreamMetadata, false);
           }
@@ -78,14 +84,13 @@ public class MltDecoder {
         } else {
           var propertyColumn =
               PropertyDecoder.decodePropertyColumn(tile, offset, columnMetadata, numStreams);
-          if (propertyColumn instanceof Map<?, ?> map) {
-            for (var a : map.entrySet()) {
-              properties.put(
-                  a.getKey().toString(),
-                  a.getValue() instanceof List<?> list ? list : List.of(a.getValue()));
+          if (propertyColumn instanceof HashMap<?, ?>) {
+            var p = ((Map<String, Object>) propertyColumn);
+            for (var a : p.entrySet()) {
+              properties.put(a.getKey(), (List<Object>) a.getValue());
             }
-          } else if (propertyColumn instanceof List<?> list) {
-            properties.put(columnName, list);
+          } else {
+            properties.put(columnName, (ArrayList) propertyColumn);
           }
         }
       }
@@ -126,36 +131,24 @@ public class MltDecoder {
           metadata.getColumnsList().size()
               - (metadata.getColumnsList().get(0).getName().equals(ID_COLUMN_NAME) ? 2 : 1);
       var propertyVectors = new Vector[numProperties];
-      for (var columnMetadata : metadata.getColumnsList()) {
+      var columList = metadata.getColumnsList();
+      for (var columnMetadata : columList) {
         var columnName = columnMetadata.getName();
         var numStreams = DecodingUtils.decodeVarint(tile, offset, 1)[0];
 
         // TODO: add decoding of vector type to be compliant with the spec
-        // TODO: compare based on ids
         if (columnName.equals(ID_COLUMN_NAME)) {
           BitVector nullabilityBuffer = null;
           if (numStreams == 2) {
             var presentStreamMetadata = StreamMetadataDecoder.decode(tile, offset);
-            var n =
+            var values =
                 VectorizedDecodingUtils.decodeBooleanRle(
                     tile, presentStreamMetadata.numValues(), offset);
-            nullabilityBuffer = new BitVector(n, presentStreamMetadata.numValues());
+            nullabilityBuffer = new BitVector(values, presentStreamMetadata.numValues());
           }
 
-          // TODO: are ids optional? -> if not transform to random access format
-          var idDataStreamMetadata = StreamMetadataDecoder.decode(tile, offset);
-          var idDataType = columnMetadata.getScalarType().getPhysicalType();
-          // TODO: check for const and sequence vectors to reduce decoding time
-          if (idDataType.equals(MltTilesetMetadata.ScalarType.UINT_32)) {
-            var id =
-                VectorizedIntegerDecoder.decodeIntStream(tile, offset, idDataStreamMetadata, false);
-            idVector = new IntFlatVector(columnName, nullabilityBuffer, id);
-          } else {
-            var id =
-                VectorizedIntegerDecoder.decodeLongStream(
-                    tile, offset, idDataStreamMetadata, false);
-            idVector = new LongFlatVector(columnName, nullabilityBuffer, id);
-          }
+          idVector = decodeIdColumn(tile, columnMetadata, offset, columnName, nullabilityBuffer);
+
         } else if (columnName.equals(GEOMETRY_COLUMN_NAME)) {
           geometryVector =
               VectorizedGeometryDecoder.decodeToRandomAccessFormat(
@@ -176,10 +169,63 @@ public class MltDecoder {
     return featureTables;
   }
 
+  private static Vector decodeIdColumn(
+      byte[] tile,
+      MltTilesetMetadata.Column columnMetadata,
+      IntWrapper offset,
+      String columnName,
+      BitVector nullabilityBuffer) {
+    Vector idVector;
+    /* If an id column is present the column is not allowed to be nullable */
+    var idDataStreamMetadata = StreamMetadataDecoder.decode(tile, offset);
+    var idDataType = columnMetadata.getScalarType().getPhysicalType();
+    var vectorType = VectorizedDecodingUtils.getVectorTypeIntStream(idDataStreamMetadata);
+    boolean isConstOrFlatVector =
+        vectorType.equals(VectorType.FLAT) || vectorType.equals(VectorType.CONST);
+    if (idDataType.equals(MltTilesetMetadata.ScalarType.UINT_32)) {
+      // TODO: add support for const vector type -> but should not be allowed in id column
+      if (isConstOrFlatVector) {
+        var id =
+            VectorizedIntegerDecoder.decodeIntStream(tile, offset, idDataStreamMetadata, false);
+        idVector = new IntFlatVector(columnName, nullabilityBuffer, id);
+      } else if (vectorType.equals(VectorType.SEQUENCE)) {
+        var id =
+            VectorizedIntegerDecoder.decodeSequenceIntStream(tile, offset, idDataStreamMetadata);
+        idVector =
+            new IntSequenceVector(
+                columnName,
+                id.getLeft(),
+                id.getRight(),
+                ((RleEncodedStreamMetadata) idDataStreamMetadata).numRleValues());
+      } else {
+        throw new IllegalArgumentException("Vector type not supported for id column.");
+      }
+    } else {
+      // TODO: add support for const vector type -> but should not be allowed in id column
+      if (isConstOrFlatVector) {
+        var id =
+            VectorizedIntegerDecoder.decodeLongStream(tile, offset, idDataStreamMetadata, false);
+        idVector = new LongFlatVector(columnName, nullabilityBuffer, id);
+      } else if (vectorType.equals(VectorType.SEQUENCE)) {
+        var id =
+            VectorizedIntegerDecoder.decodeSequenceLongStream(tile, offset, idDataStreamMetadata);
+        idVector =
+            new LongSequenceVector(
+                columnName,
+                id.getLeft(),
+                id.getRight(),
+                ((RleEncodedStreamMetadata) idDataStreamMetadata).numRleValues());
+      } else {
+        throw new IllegalArgumentException("Vector type not supported for id column.");
+      }
+    }
+    return idVector;
+  }
+
   private static Layer convertToLayer(
       List<Long> ids,
       Geometry[] geometries,
-      Map<String, List<?>> properties,
+      Map<String, List<Object>> properties,
       MltTilesetMetadata.FeatureTableSchema metadata,
       int numFeatures) {
     if (numFeatures != geometries.length || numFeatures != ids.size()) {
